--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,6 +230,10 @@ HERO SECTION
 	border-color: white;
 	height: 60px;
 	width: 266px;
+	
+}
+button:focus:not(:focus-visible) {
+    outline: unset;
 }
 
 .ptb-hero {
@@ -244,7 +248,7 @@ HERO SECTION
 .kfc-logo {
 	font-family: 'FontAwesome';
 	font-weight: 700;
-	font-size: 80px;
+	font-size: 65px;
 }
 
 .navbar {
@@ -366,9 +370,9 @@ HAMBURGER
 	font-size: 30px;
 }
 
-
-
-
+.mobile-app .mobile-right-area .mobile-download a:hover {
+    transform: scale(1.1);
+}
 /**********OFFERS************/
 .offer-backgroud {
 	background-color: rgb(252 223 196 / 39%);
@@ -456,8 +460,8 @@ HAMBURGER
 	margin: 0;
 }
 .offer-image{
-	width: 354px;
-    height: 190px;
+	width: 100%;
+    height: 160px;
 }
 .slider2 .owl-item.active.center .slider-card {
 	transform: scale(1.15);
@@ -662,7 +666,7 @@ ul>li {
 }
 .iframe-back {
 	background-color: white;
-	height: 250px;
+	height: 100%;
 	width: 100%;
 	position: relative;
 	border-radius: 35px;
@@ -680,6 +684,27 @@ ul>li {
 	background-color: rgb(252 223 196 / 39%);
 }
 
+.lineUp {
+	animation: 2s anim-lineUp;
+	animation-iteration-count: 1;
+  }
+  @keyframes anim-lineUp {
+	0% {
+	  opacity: 0;
+	  transform: translateY(80%);
+	}
+	20% {
+	  opacity: 0;
+	}
+	50% {
+	  opacity: 1;
+	  transform: translateY(0%);
+	}
+	100% {
+	  opacity: 1;
+	  transform: translateY(0%);
+	}
+  }
 .slider2 .owl-item.active.center .slider-card-sec-5 {
 	transform: scale(1.15);
 	opacity: 1;
@@ -873,6 +898,9 @@ ul>li {
 		.icon-margin-bottom{
 			margin-bottom: 10px;
 		}
+		.offer-real-chicken-btn {
+			padding-top: 42px;
+		}
 		/***********offer**********/
 	
 		/*.back-circle-brown {
@@ -885,8 +913,8 @@ ul>li {
 			font-size: 20px;
 		}
 		.offer-sec-btn {
-			padding: 11px;
-			width: 196px;
+			padding: 9px;
+   			width: 120px;
 		}
 		.offer-seemore-btn {
 			padding-top: 52px;
@@ -927,12 +955,16 @@ ul>li {
 			width: 35px;
 			font-size: 27px;
 		}
+		.mobile-app .mobile-right-area .mobile-download a {
+			padding: 13px 6px;
+		}
 		.font-14{
 			font-size: 13px;
 		}
 		.font-20{
 			font-size: 14px;
 		}
+		
 	}
 	
 
